--- a/app/src/main/res/drawable/background_splash.xml
+++ b/app/src/main/res/drawable/background_splash.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:drawable="@color/colorPrimaryDark" />
+        android:drawable="@color/background_material_light" />
 
     <item>
         <bitmap
+            android:tileMode="disabled"
             android:gravity="center"
             android:src="@mipmap/ic_launcher"/>
     </item>
